--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.31",
+    "@nextui-org/card": "^2.0.28",
+    "@nextui-org/image": "^2.0.27",
     "@nextui-org/link": "^2.0.29",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "@tauri-apps/api": "^2.0.0-beta.11",
     "@tauri-apps/plugin-sql": "^2.0.0-beta.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
@@ -31,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
