--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.5", features = [ "window-unmaximize", "window-close", "window-unminimize", "window-show", "window-minimize", "window-maximize", "window-hide", "window-start-dragging"] }
+tauri = { version = "1.6.5", features = [ "window-all"] }
 
 [dependencies.tauri-plugin-sql]
 git = "https://github.com/tauri-apps/plugins-workspace"
