--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hmsoft"
 version = "0.1.0"
-description = "A Tauri App"
+description = "Hotel Management Software"
 authors = ["you"]
 edition = "2021"
 
@@ -11,6 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
+csv = "1.1"
 tauri = { version = "1", features = [ "window-unminimize", "window-hide", "window-maximize", "window-unmaximize", "window-show", "window-minimize", "window-close", "window-start-dragging", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
